--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
 set -g default-terminal "xterm-256color"
-#export TERM="xterm-256color"
-
+set -g default-command "zsh"
+set -g default-shell $SHELL
+# export TERM="xterm-256color"
+# set -g default-shell /usr/bin/zsh
+# set -g default-command /usr/bin/zsh
+# set-option -g default-shell /bin/zsh
